--- a/PDS-env.yml
+++ b/PDS-env.yml
@@ -1,6 +1,6 @@
 channels:
-  - conda-forge
   - bioconda
+  - conda-forge
   - defaults
   - anaconda
   - r
@@ -12,20 +12,34 @@ dependencies:
   - backcall=0.2.0
   - backports=1.0
   - backports.functools_lru_cache=1.6.1
+  - basemap=1.2.2
   - bleach=3.2.1
+  - blosc=1.20.1
+  - brotli=1.0.9
+  - brunsli=0.1
+  - bzip2=1.0.8
+  - c-ares=1.11.0
   - ca-certificates=2020.6.20
   - certifi=2020.6.20
   - cffi=1.14.3
+  - charls=2.1.0
+  - cloudpickle=1.6.0
   - cycler=0.10.0
+  - cytoolz=0.11.0
+  - dask-core=2.30.0
   - dbus=1.13.6
   - decorator=4.4.2
   - defusedxml=0.6.0
   - entrypoints=0.3
   - expat=2.2.9
   - freetype=2.10.3
+  - geos=3.8.1
   - gettext=0.19.8.1
+  - giflib=5.2.1
   - glib=2.66.1
   - icu=67.1
+  - imagecodecs=2020.5.30
+  - imageio=2.9.0
   - importlib-metadata=2.0.0
   - importlib_metadata=2.0.0
   - ipykernel=5.3.4
@@ -40,29 +54,45 @@ dependencies:
   - jupyter=1.0.0
   - jupyter_client=6.1.7
   - jupyter_console=6.2.0
+  - jupyter_contrib_core=0.3.3
+  - jupyter_contrib_nbextensions=0.5.1
   - jupyter_core=4.6.3
+  - jupyter_highlight_selected_word=0.2.0
+  - jupyter_latex_envs=1.4.6
+  - jupyter_nbextensions_configurator=0.4.1
   - jupyterlab_pygments=0.1.2
+  - jxrlib=1.1
   - kiwisolver=1.2.0
   - krb5=1.17.1
   - lcms2=2.11
+  - lerc=2.2
+  - libaec=1.0.4
   - libblas=3.8.0
   - libcblas=3.8.0
   - libclang=10.0.1
+  - libcurl=7.71.1
   - libcxx=11.0.0
   - libedit=3.1.20191231
+  - libev=4.33
   - libffi=3.2.1
   - libgfortran=4.0.0
   - libgfortran4=7.5.0
   - libiconv=1.16
   - liblapack=3.8.0
   - libllvm10=10.0.1
+  - libnghttp2=1.41.0
   - libopenblas=0.3.10
   - libpng=1.6.37
   - libpq=12.3
   - libsodium=1.0.18
+  - libssh2=1.9.0
   - libtiff=4.1.0
   - libwebp-base=1.1.0
+  - libxml2=2.9.10
+  - libxslt=1.1.33
+  - libzopfli=1.0.3
   - llvm-openmp=11.0.0
+  - lxml=4.6.1
   - lz4-c=1.9.2
   - markupsafe=1.1.1
   - matplotlib=3.3.2
@@ -71,15 +101,17 @@ dependencies:
   - mysql-common=8.0.21
   - mysql-libs=8.0.21
   - nbclient=0.5.0
-  - nbconvert=6.0.7
+  - nbconvert=5.6.1
   - nbformat=5.0.8
   - ncurses=6.2
   - nest-asyncio=1.4.1
+  - networkx=2.5
   - notebook=6.1.4
   - nspr=4.20
   - nss=3.47
   - numpy=1.19.1
   - olefile=0.46
+  - openjpeg=2.3.1
   - openssl=1.1.1h
   - packaging=20.4
   - pandas=1.1.3
@@ -92,6 +124,7 @@ dependencies:
   - pickleshare=0.7.5
   - pillow=8.0.0
   - pip=20.2.3
+  - proj=7.1.1
   - prometheus_client=0.8.0
   - prompt-toolkit=3.0.8
   - prompt_toolkit=3.0.8
@@ -99,17 +132,22 @@ dependencies:
   - pycparser=2.20
   - pygments=2.7.1
   - pyparsing=2.4.7
+  - pyproj=2.6.1.post1
   - pyqt=5.12.3
   - pyrsistent=0.17.3
+  - pyshp=2.1.2
   - python=3.8.6
   - python-dateutil=2.8.1
   - python_abi=3.8
   - pytz=2020.1
+  - pywavelets=1.1.1
+  - pyyaml=5.3.1
   - pyzmq=19.0.2
   - qt=5.12.9
   - qtconsole=4.7.7
   - qtpy=1.9.0
   - readline=8.0
+  - scikit-image=0.17.2
   - scikit-learn=0.23.2
   - scipy=1.5.2
   - seaborn=0.11.0
@@ -117,12 +155,15 @@ dependencies:
   - send2trash=1.5.0
   - setuptools=49.6.0
   - six=1.15.0
+  - snappy=1.1.8
   - sqlite=3.33.0
   - statsmodels=0.12.0
   - terminado=0.9.1
   - testpath=0.4.4
   - threadpoolctl=2.1.0
+  - tifffile=2020.10.1
   - tk=8.6.10
+  - toolz=0.11.1
   - tornado=6.0.4
   - traitlets=5.0.5
   - wcwidth=0.2.5
@@ -130,7 +171,9 @@ dependencies:
   - wheel=0.35.1
   - widgetsnbextension=3.5.1
   - xz=5.2.5
+  - yaml=0.2.5
   - zeromq=4.3.3
+  - zfp=0.5.5
   - zipp=3.3.0
   - zlib=1.2.11
   - zstd=1.4.5
@@ -138,4 +181,5 @@ dependencies:
     - pyqt5-sip==4.19.18
     - pyqtchart==5.12
     - pyqtwebengine==5.12.1
-prefix: /Users/martinscience/miniconda/envs/CNV2-env
+prefix: /Users/mahtin/miniconda/envs/PDS-env
+
