--- a/PDS-env_py310_M1.yml
+++ b/PDS-env_py310_M1.yml
@@ -13,6 +13,7 @@ dependencies:
   - backcall=0.2.0
   - backports=1.0
   - backports.functools_lru_cache=1.6.4
+  - basemap=1.2.2
   - bleach=4.1.0
   - blosc=1.21.0
   - brotli=1.0.9
@@ -40,7 +41,7 @@ dependencies:
   - fonttools=4.28.5
   - freetype=2.10.4
   - fsspec=2021.11.1
-  - geos=3.10.1
+  - geos=3.9.1
   - gettext=0.19.8.1
   - giflib=5.2.1
   - icu=68.2
@@ -134,6 +135,7 @@ dependencies:
   - pickleshare=0.7.5
   - pillow=8.4.0
   - pip=21.3.1
+  - proj=8.0.1
   - prometheus_client=0.12.0
   - prompt-toolkit=3.0.24
   - prompt_toolkit=3.0.24
@@ -141,12 +143,14 @@ dependencies:
   - pycparser=2.21
   - pygments=2.11.2
   - pyparsing=3.0.6
+  - pyproj=3.3.0
   - pyqt=5.12.3
   - pyqt-impl=5.12.3
   - pyqt5-sip=4.19.18
   - pyqtchart=5.12
   - pyqtwebengine=5.12.1
   - pyrsistent=0.18.0
+  - pyshp=2.1.3
   - python=3.10.1
   - python-dateutil=2.8.2
   - python_abi=3.10
@@ -165,7 +169,7 @@ dependencies:
   - seaborn=0.11.2
   - seaborn-base=0.11.2
   - send2trash=1.8.0
-  - setuptools=60.5.0
+  - setuptools=59.8.0
   - six=1.16.0
   - snappy=1.1.8
   - sqlite=3.37.0
